# lfm-discord-presence

./: .env.sample  Cargo.toml  LICENSE  README.md  justfile
src/: main.rs
systemd/: lfm-discord-presence.service
