[package]
name = "lfm-discord-presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
discord-rich-presence = "0.2.3"
chrono = "0.4.23"
lastfm-rs = "0.5.0"
openssl-sys = "0.9.78"
